--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     <!-- Part 1: Podium Level Facilities -->
     <div class="facilities-split">
       <div class="facilities-image">
-        <img src="facilities-plan-1.jpg" alt="D'Tessera Podium Facilities" onerror="this.src='https://via.placeholder.com/700x500/f0e9d8/1a3a2e?text=Podium+Level+Facilities'">
+        <img src="facilities-plan-1.jpg" alt="D'Tessera Podium Facilities" onerror="this.src='data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='600'%3E%3Crect width='100%25' height='100%25' fill='%23f0e9d8'/%3E%3Ctext x='50%25' y='50%25' font-family='sans-serif' font-size='22' fill='%231a3a2e' text-anchor='middle' dominant-baseline='middle'%3EPodium Level Facilities%3C/text%3E%3C/svg%3E'">
       </div>
       <div class="facilities-content">
         <h3>Podium Level Facilities</h3>
@@ -555,7 +555,7 @@
     <!-- Part 2: Sky Deck & Additional Facilities -->
     <div class="facilities-split reverse">
       <div class="facilities-image">
-        <img src="facilities-plan-2.jpg" alt="D'Tessera Sky Deck Facilities" onerror="this.src='https://via.placeholder.com/700x500/f0e9d8/1a3a2e?text=Sky+Deck+Facilities'">
+        <img src="facilities-plan-2.jpg" alt="D'Tessera Sky Deck Facilities" onerror="this.src='data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='600'%3E%3Crect width='100%25' height='100%25' fill='%23f0e9d8'/%3E%3Ctext x='50%25' y='50%25' font-family='sans-serif' font-size='22' fill='%231a3a2e' text-anchor='middle' dominant-baseline='middle'%3ESky Deck Facilities%3C/text%3E%3C/svg%3E'">
       </div>
       <div class="facilities-content">
         <h3>Sky Deck & Additional Facilities</h3>
@@ -629,7 +629,7 @@
     <div id="layoutA1A2" class="layout-content active">
       <div class="layout-showcase">
         <div class="layout-image">
-          <img src="layout-a1-a2.jpg" alt="Type A1 & A2 Layout" onerror="this.src='https://via.placeholder.com/700x600/f0e9d8/1a3a2e?text=Layout+Type+A1+%26+A2'">
+          <img src="layout-a1-a2.jpg" alt="Type A1 & A2 Layout" onerror="this.src='data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='600'%3E%3Crect width='100%25' height='100%25' fill='%23f0e9d8'/%3E%3Ctext x='50%25' y='50%25' font-family='sans-serif' font-size='22' fill='%231a3a2e' text-anchor='middle' dominant-baseline='middle'%3ELayout Type A1 & A2%3C/text%3E%3C/svg%3E'">
         </div>
         <div class="layout-details">
           <h3>Type A1 & A2</h3>
@@ -666,7 +666,7 @@
     <div id="layoutA3A4" class="layout-content">
       <div class="layout-showcase">
         <div class="layout-image">
-          <img src="layout-a3-a4.jpg" alt="Type A3 & A4 Layout" onerror="this.src='https://via.placeholder.com/700x600/f0e9d8/1a3a2e?text=Layout+Type+A3+%26+A4'">
+          <img src="layout-a3-a4.jpg" alt="Type A3 & A4 Layout" onerror="this.src='data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='600'%3E%3Crect width='100%25' height='100%25' fill='%23f0e9d8'/%3E%3Ctext x='50%25' y='50%25' font-family='sans-serif' font-size='22' fill='%231a3a2e' text-anchor='middle' dominant-baseline='middle'%3ELayout Type A3 & A4%3C/text%3E%3C/svg%3E'">
         </div>
         <div class="layout-details">
           <h3>Type A3 & A4</h3>
@@ -703,7 +703,7 @@
     <div id="layoutA5A6" class="layout-content">
       <div class="layout-showcase">
         <div class="layout-image">
-          <img src="layout-a5-a6.jpg" alt="Type A5 & A6 Layout" onerror="this.src='https://via.placeholder.com/700x600/f0e9d8/1a3a2e?text=Layout+Type+A5+%26+A6'">
+          <img src="layout-a5-a6.jpg" alt="Type A5 & A6 Layout" onerror="this.src='data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='600'%3E%3Crect width='100%25' height='100%25' fill='%23f0e9d8'/%3E%3Ctext x='50%25' y='50%25' font-family='sans-serif' font-size='22' fill='%231a3a2e' text-anchor='middle' dominant-baseline='middle'%3ELayout Type A5 & A6%3C/text%3E%3C/svg%3E'">
         </div>
         <div class="layout-details">
           <h3>Type A5 & A6</h3>
@@ -740,7 +740,7 @@
     <div id="layoutB1B2" class="layout-content">
       <div class="layout-showcase">
         <div class="layout-image">
-          <img src="layout-b1-b2.jpg" alt="Type B1 & B2 Layout" onerror="this.src='https://via.placeholder.com/700x600/f0e9d8/1a3a2e?text=Layout+Type+B1+%26+B2'">
+          <img src="layout-b1-b2.jpg" alt="Type B1 & B2 Layout" onerror="this.src='data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='600'%3E%3Crect width='100%25' height='100%25' fill='%23f0e9d8'/%3E%3Ctext x='50%25' y='50%25' font-family='sans-serif' font-size='22' fill='%231a3a2e' text-anchor='middle' dominant-baseline='middle'%3ELayout Type B1 & B2%3C/text%3E%3C/svg%3E'">
         </div>
         <div class="layout-details">
           <h3>Type B1 & B2</h3>
@@ -778,7 +778,7 @@
     <div id="layoutB3B4" class="layout-content">
       <div class="layout-showcase">
         <div class="layout-image">
-          <img src="layout-b3-b4.jpg" alt="Type B3 & B4 Layout" onerror="this.src='https://via.placeholder.com/700x600/f0e9d8/1a3a2e?text=Layout+Type+B3+%26+B4'">
+          <img src="layout-b3-b4.jpg" alt="Type B3 & B4 Layout" onerror="this.src='data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='600'%3E%3Crect width='100%25' height='100%25' fill='%23f0e9d8'/%3E%3Ctext x='50%25' y='50%25' font-family='sans-serif' font-size='22' fill='%231a3a2e' text-anchor='middle' dominant-baseline='middle'%3ELayout Type B3 & B4%3C/text%3E%3C/svg%3E'">
         </div>
         <div class="layout-details">
           <h3>Type B3 & B4</h3>
@@ -816,7 +816,7 @@
     <div id="layoutC1C2" class="layout-content">
       <div class="layout-showcase">
         <div class="layout-image">
-          <img src="layout-c1-c2.jpg" alt="Type C1 & C2 Layout" onerror="this.src='https://via.placeholder.com/700x600/f0e9d8/1a3a2e?text=Layout+Type+C1+%26+C2'">
+          <img src="layout-c1-c2.jpg" alt="Type C1 & C2 Layout" onerror="this.src='data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='600'%3E%3Crect width='100%25' height='100%25' fill='%23f0e9d8'/%3E%3Ctext x='50%25' y='50%25' font-family='sans-serif' font-size='22' fill='%231a3a2e' text-anchor='middle' dominant-baseline='middle'%3ELayout Type C1 & C2%3C/text%3E%3C/svg%3E'">
         </div>
         <div class="layout-details">
           <h3>Type C1 & C2</h3>
@@ -853,7 +853,7 @@
     <div id="layoutD1D2" class="layout-content">
       <div class="layout-showcase">
         <div class="layout-image">
-          <img src="layout-d1-d2.jpg" alt="Type D1 & D2 Layout" onerror="this.src='https://via.placeholder.com/700x600/f0e9d8/1a3a2e?text=Layout+Type+D1+%26+D2'">
+          <img src="layout-d1-d2.jpg" alt="Type D1 & D2 Layout" onerror="this.src='data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='600'%3E%3Crect width='100%25' height='100%25' fill='%23f0e9d8'/%3E%3Ctext x='50%25' y='50%25' font-family='sans-serif' font-size='22' fill='%231a3a2e' text-anchor='middle' dominant-baseline='middle'%3ELayout Type D1 & D2%3C/text%3E%3C/svg%3E'">
         </div>
         <div class="layout-details">
           <h3>Type D1 & D2</h3>
@@ -1130,7 +1130,7 @@
       
       <div class="footer-bottom">
         <p>&copy; 2026 D'Tessera Residences • Developed by Exsim Group</p>
-        <p style="margin-top:10px">Vincent Chi • Property Consultant • +6017-754 4163 • vincent.chiameh@gmail.com</p>
+        <p style="margin-top:10px">Vincent Chi • Property Consultant • +6017-754 4163 • <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="9ceaf5f2fff9f2e8b2fff4f5fdf1f9f4dcfbf1fdf5f0b2fff3f1">[email&#160;protected]</a></p>
       </div>
     </div>
   </footer>
@@ -1144,7 +1144,7 @@
     <img src="" alt="Gallery Image" id="lightbox-img">
   </div>
 
-  <script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     // Google Apps Script URL
     const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx78EBcc0vv2hKBYopDwBmRrSuCAIuGEm6I-lKg1zCVPW-DY4sBiKk828VdH4irtyg/exec';
 
@@ -1292,14 +1292,4 @@
     });
 
     document.querySelector('.mobile-menu').addEventListener('click', function() {
-      alert('Mobile menu - Add mobile navigation functionality here');
-    });
-
-    // Debug: Log when page loads
-    window.addEventListener('load', function() {
-      console.log('🌐 D\'Tessera website loaded');
-      console.log('📋 Script URL:', SCRIPT_URL);
-    });
-  </script>
-</body>
-</html>
+      alert('Mobile menu - Add mobile navigation functionality her
