--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
     
     <div class="facilities-split">
       <div class="facilities-image">
-        <img src="facilities-plan-1.jpg" alt="D'Tessera Podium Facilities" onerror="this.src='https://via.placeholder.com/700x500/f0e9d8/1a3a2e?text=Podium+Level+Facilities'">
+        <img src="facilities-plan-1.png" alt="D'Tessera Podium Facilities" onerror="this.src='https://via.placeholder.com/700x500/f0e9d8/1a3a2e?text=Podium+Level+Facilities'">
       </div>
       <div class="facilities-content">
         <h3>Podium Level Facilities</h3>
@@ -570,7 +570,7 @@
 
     <div class="facilities-split reverse">
       <div class="facilities-image">
-        <img src="facilities-plan-2.jpg" alt="D'Tessera Sky Deck Facilities" onerror="this.src='https://via.placeholder.com/700x500/f0e9d8/1a3a2e?text=Sky+Deck+Facilities'">
+        <img src="facilities-plan-2.png" alt="D'Tessera Sky Deck Facilities" onerror="this.src='https://via.placeholder.com/700x500/f0e9d8/1a3a2e?text=Sky+Deck+Facilities'">
       </div>
       <div class="facilities-content">
         <h3>Sky Deck & Additional Facilities</h3>
